[AI Fix] (a11y ADA compliance): set footer p-name text color to #757575 for WCAG contrast

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -236,6 +236,10 @@
   color: #757575;
 }
 
+.footer-col .p-name {
+  color: #757575;
+}
+
 .post-link {
   display: block;
   @include relative-font-size(1.5);
